prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__append_select.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# duckdb:skip\n# postgres:skip\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 10..15\nappend (\n  from invoices\n  select { customer_id, invoice_id, billing_country }\n  take 40..45\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select.longform.prql
---
SELECT
  *
FROM
  (
    SELECT
      billing_country,
      invoice_id
    FROM
      invoices
    LIMIT
      6 OFFSET 9
  ) AS table_2
UNION
ALL
SELECT
  *
FROM
  (
    SELECT
      billing_country,
      invoice_id
    FROM
      invoices
    LIMIT
      6 OFFSET 39
  ) AS table_3
