prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__append_select.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# clickhouse:skip\n# glaredb:skip\n# sqlite:skip\n# mysql:skip\n\n# duckdb:test\n# postgres:test\n\n# default-dialect:duckdb\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 10..15\nappend (\n  from invoices\n  select { customer_id, invoice_id, billing_country }\n  take 40..45\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select.shortform.prql
---
(
  SELECT
    billing_country,
    invoice_id
  FROM
    invoices
  LIMIT
    6 OFFSET 9
)
UNION
ALL (
  SELECT
    billing_country,
    invoice_id
  FROM
    invoices
  LIMIT
    6 OFFSET 39
)
