prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__append_select_compute.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# clickhouse:skip\n# glaredb:skip\n# sqlite:skip\n# mysql:skip\n\n# duckdb:test\n# postgres:test\n\n# default-dialect:duckdb\n\nfrom invoices\nselect { customer_id, invoice_id, total }\ntake 5\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, unit_price }\n  take 5\n)\nselect { a = customer_id * 2, b = math.round 1 (invoice_id * total) }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.shortform.prql
---
WITH table_1 AS (
  (
    SELECT
      invoice_id,
      total,
      customer_id
    FROM
      invoices
    LIMIT
      5
  )
  UNION
  ALL (
    SELECT
      invoice_id,
      unit_price,
      invoice_line_id
    FROM
      invoice_items
    LIMIT
      5
  )
)
SELECT
  customer_id * 2 AS a,
  ROUND(invoice_id * total, 1) AS b
FROM
  table_1
