prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__append_select_multiple_with_null.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# duckdb:skip\n# postgres:skip\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 5\nappend (\n  from employees\n  select { employee_id, employee_id, country }\n  take 5\n)\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, null }\n  take 5\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple_with_null.longform.prql
---
SELECT
  *
FROM
  (
    SELECT
      billing_country,
      invoice_id
    FROM
      invoices
    LIMIT
      5
  ) AS table_4
UNION
ALL
SELECT
  *
FROM
  (
    SELECT
      country,
      employee_id
    FROM
      employees
    LIMIT
      5
  ) AS table_5
UNION
ALL
SELECT
  *
FROM
  (
    SELECT
      NULL,
      invoice_id
    FROM
      invoice_items
    LIMIT
      5
  ) AS table_6
