prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__append_select_nulls.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# duckdb:skip\n# postgres:skip\n\nfrom invoices\nselect {an_id = invoice_id, name = null}\ntake 2\nappend (\n  from employees\n  select {an_id = null, name = first_name}\n  take 2\n)\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_nulls.longform.prql
---
SELECT
  *
FROM
  (
    SELECT
      invoice_id AS an_id,
      NULL AS name
    FROM
      invoices
    LIMIT
      2
  ) AS table_2
UNION
ALL
SELECT
  *
FROM
  (
    SELECT
      NULL AS an_id,
      first_name AS name
    FROM
      employees
    LIMIT
      2
  ) AS table_3
